Tidied up some mess

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!-- Title --> 
-    <title>Protype</title>
+    <title>IDEA Lab</title>
 
     <!-- Site Description --> 
     <meta name="description" content="Github-Page-based Website for the IDEA Lab of Department of Aeronautics, Imperial College London">
@@ -144,7 +144,7 @@
         },
         footer: {
           copy: '<span> &copy; 2021</span>',
-          auth: 'by Hui Ling Wong',
+          auth: 'by IDEA Lab, Department of Aeronautics, Imperial College London',
           pre: '<hr/>',
           style: 'text-align: right;',
           class: 'className',
