--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <!-- 1. Theme --> 
     <!-- Theme: Simple Dark --> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"> -->
     <!-- Theme: Simple --> 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> 
 
     <!-- Theme: Simple --> 
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themess/vue.css"/>  -->
@@ -73,9 +73,9 @@
           responsiveTables: true  // default
         },
 
-        // <!-- Turn nav bar on -->
-        loadNavbar: true,
-        mergeNavbar: true,
+        // <!-- Turn nav bar off -->
+        loadNavbar: false,
+        mergeNavbar: false,
 
         // <!-- Turn side bar on -->
         loadSidebar: true,
