Tidied up the styles and started attempting adding image slide shows

--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
 
     <!-- 2. PrismJS Themes -->
     <link rel="stylesheet" href="https://unpkg.com/prism-github/prism-github.css">
-    <link rel="stylesheet" href="https://unpkg.com/prism-theme-one-dark/prism-onedark.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/prism-theme-one-dark/prism-onedark.css"> -->
 
-    <!-- Footer --> 
-    <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@sujaykumarh/docsify-plugin-footer@1.x/dist/plugin.min.css"> -->
-    <link rel="stylesheet" href="cutom_theme.css">
 
     <!-- Custom Buttom - DIY CSS file  --> 
-    <link rel="stylesheet" href="//unpkg.com/docsify-accordify/src/assets/ugly-dark-theme.css">
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify-accordify/src/assets/ugly-dark-theme.css">s -->
 
     <!-- 3. Custom Theme Properties -->
     <style>
@@ -197,6 +194,7 @@
             },
           },
         },
+
         vueMounts: {
           '#counter': {
             data: function () {
