Added auto slideshow to homepage

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 
       };
 
+      // FOR SLIDESHOW ------------------------------------------------------
       var slideIndex = 1;
       showSlides(slideIndex);
       
@@ -273,6 +274,7 @@
         }
         slides[slideIndex-1].style.display = "block";  
         dots[slideIndex-1].className += " active";
+      // ---------------------------------------------------------------------
       };
 
     </script>
