--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       window.$docsify = {
         name: 'IDEA Lab',
         repo: 'https://github.com/IDEA-lab-IC/IDEA-lab-IC.github.io',
-        coverpage: true,
+        // coverpage: true,
         // onlyCover: false,  // only displays the cover page
         executeScript: true,
 
