--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="google" content="notranslate">
+    <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!-- Title --> 
@@ -140,7 +142,7 @@
           }
         },
         footer: {
-          copy: '<span> &copy; 2022</span>',
+          copy: '<span> &copy; 2023</span>',
           auth: 'by IDEA Lab, Department of Aeronautics, Imperial College London',
           pre: '<hr/>',
           style: 'text-align: right;',
